--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tsnextapp",
+  "name": "market",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,8 +8,16 @@
     "start": "next start"
   },
   "dependencies": {
+    "@types/axios": "^0.14.0",
+    "@types/node": "^14.0.23",
+    "@types/react": "^16.9.43",
+    "axios": "^0.19.2",
     "next": "9.4.4",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "sass": "^1.26.10"
+  },
+  "devDependencies": {
+    "typescript": "^3.9.6"
   }
 }
